Z-index bug and google analytics.

--- a/public/css/4-modules/_contact.scss
+++ b/public/css/4-modules/_contact.scss
@@ -21,7 +21,7 @@
     height: 100vh;
     width: 100%;
     background-color: rgba($color: #000000, $alpha: 0.3);
-    z-index: 2;
+    z-index: 5;
 
     visibility: hidden;
     opacity: 0;
@@ -43,7 +43,7 @@
     color: var(--form-text);
     background-color: var(--form-bg);
     border-radius: 10px;
-    z-index: 4;
+    z-index: 6;
 
     .error {
         border: solid thin;
