--- a/public/css/main.css
+++ b/public/css/main.css
@@ -341,7 +341,7 @@ nav .open .line3 {
   height: 100vh;
   width: 100%;
   background-color: rgba(0, 0, 0, 0.3);
-  z-index: 2;
+  z-index: 5;
   visibility: hidden;
   opacity: 0;
   -webkit-transition: visibility 0s, opacity 0.5s;
@@ -362,7 +362,7 @@ nav .open .line3 {
   color: var(--form-text);
   background-color: var(--form-bg);
   border-radius: 10px;
-  z-index: 4;
+  z-index: 6;
 }
 
 .modal .error {
